--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="profile-card">
       <div class="image">
         <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSK6dsWEWcjGT1X3fgrrwXZzPjzxuCkSJFpP1znV8zMPgYqIjW4dRZTxafwiIrJiHGWRxM&usqp=CAU"
+          src="tushar.jpeg"
           alt=""
           class="profile-img"
         />
       </div>
       <div class="textdata">
-        <span class="name">Portgas D. Ace</span>
-        <span class="job">White Beard Pirates</span>
+        <span class="name">Tushar Grover</span>
+        <span class="job">BBA Student</span>
       </div>
       <div class="media-buttons">
         <a href="#" style="background:#4267b2 ;" class="link">
