--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <span class="job">BBA Student</span>
       </div>
       <div class="media-buttons">
-        <a href="#" style="background:#4267b2 ;" class="link">
-          <i class="bx bxl-facebook"></i>
+        <a href="https://www.snapchat.com/add/coldas_ice02?share_id=a-vmI5v_R28&locale=en-GB" style="background:#d2ff0b ;" class="link">
+          <i class='bx bxl-snapchat'></i>
         </a>
         <a href="#" style="background: #1da1f2;" class="link">
           <i class="bx bxl-twitter"></i>
         </a>
-        <a href="#" style="background: #e1306c;" class="link">
+        <a href="https://instagram.com/_cold._.as._.ice_?igshid=OGQ5ZDc2ODk2ZA==" style="background: #e1306c;" class="link">
           <i class="bx bxl-instagram"></i>
         </a>
         <a href="#" style="background: #f00; ;" class="link">
