--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span class="job">BBA Student</span>
       </div>
       <div class="media-buttons">
-        <a href="https://www.snapchat.com/add/coldas_ice02?share_id=a-vmI5v_R28&locale=en-GB" style="background:#d2ff0b ;" class="link">
+        <a href="https://www.snapchat.com/add/coldas_ice02?share_id=a-vmI5v_R28&locale=en-GB" style="background:#fff200 ;" class="link">
           <i class='bx bxl-snapchat'></i>
         </a>
         <a href="#" style="background: #1da1f2;" class="link">
