--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
         <a href="https://www.snapchat.com/add/coldas_ice02?share_id=a-vmI5v_R28&locale=en-GB" style="background:#fff200 ;" class="link">
           <i class='bx bxl-snapchat'></i>
         </a>
-        <a href="#" style="background: #1da1f2;" class="link">
-          <i class="bx bxl-twitter"></i>
+        <a href="https://api.whatsapp.com/send?phone=917982651586" style="background: #0ff903;" class="link">
+          <i class='bx bxl-whatsapp'></i>
         </a>
         <a href="https://instagram.com/_cold._.as._.ice_?igshid=OGQ5ZDc2ODk2ZA==" style="background: #e1306c;" class="link">
           <i class="bx bxl-instagram"></i>
         </a>
-        <a href="#" style="background: #f00; ;" class="link">
-          <i class="bx bxl-youtube"></i>
-        </a>
+        
       </div>
       <div class="buttons">
         <button class="button">Subscribe</button>
