--- a/index.html
+++ b/index.html
@@ -36,23 +36,9 @@
         
       </div>
       <div class="buttons">
-        <button class="button">Subscribe</button>
-        <button class="button">Message</button>
+        <button class="button"><a href="https://instagram.com/_cold._.as._.ice_?igshid=OGQ5ZDc2ODk2ZA==">Follow</a></button>
+        <button class="button"><a href="https://api.whatsapp.com/send?phone=917982651586">Message</a></button>
       </div>
-      <div class="analytics">
-        <div class="data">
-            <i class='bx bx-heart' ></i>
-            <span class="number">100k</span>
-        </div>
-        <div class="data">
-            <i class='bx bx-chat' ></i>
-            <san class="number">70k</san>
-        </div>
-        <div class="data">
-            <i class='bx bx-share-alt' ></i>
-            <span class="number">500k</span>
-        </div>
-        
       </div>
     </div>
   </body>
