--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         
       </div>
       <div class="buttons">
-        <button class="button"><a href="https://instagram.com/_cold._.as._.ice_?igshid=OGQ5ZDc2ODk2ZA==">Follow</a></button>
-        <button class="button"><a href="https://api.whatsapp.com/send?phone=917982651586">Message</a></button>
+        <button class="button" style="color:#ffffff"><a href="https://instagram.com/_cold._.as._.ice_?igshid=OGQ5ZDc2ODk2ZA==">Follow</a></button>
+        <button class="button" style="color:#ffffff"><a href="https://api.whatsapp.com/send?phone=917982651586">Message</a></button>
       </div>
       </div>
     </div>
