--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="https://api.whatsapp.com/send?phone=917982651586" style="background: #0ff903;" class="link">
           <i class='bx bxl-whatsapp'></i>
         </a>
-        <a href="https://instagram.com/_cold._.as._.ice_?igshid=OGQ5ZDc2ODk2ZA==" style="background: #e1306c;" class="link">
+        <a href="https://www.instagram.com/_cold._.as._.ice_/" style="background: #e1306c;" class="link">
           <i class="bx bxl-instagram"></i>
         </a>
         
